# myRaft

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: cluster_benchmark.cpp
docs/: architecture.md  development_log.md  optimization.md  phase9_membership_plan.md  phase9_retrospective.md  test_report.md
scripts/: expand_cluster.sh
src/client/: admin_main.cpp  main.cpp
src/common/: bounded_queue.h
src/network/: connection.cpp  connection.h  peer_transport.cpp  peer_transport.h  protocol.cpp  protocol.h  raft_protocol.cpp  raft_protocol.h  server.cpp  server.h  tcp_client.cpp  tcp_client.h
src/raft/: cluster_config.cpp  cluster_config.h  file_raft_persistence.cpp  file_raft_persistence.h  file_snapshot_store.cpp  file_snapshot_store.h  kv_command.cpp  kv_command.h  leader_election.cpp  leader_election.h  log_replication.cpp  log_replication.h  raft_kv_service.cpp  raft_kv_service.h  raft_log.cpp  raft_log.h  raft_node.cpp  raft_node.h  raft_persistence.h  state_machine.cpp  state_machine.h  types.h
src/server/: main.cpp  node_main.cpp  node_service.cpp  node_service.h
src/storage/: kv_store.cpp  kv_store.h  wal.cpp  wal.h
tests/: cluster_process_test.cpp  connection_test.cpp  kv_store_test.cpp  network_integration_test.cpp  node_service_test.cpp  protocol_test.cpp  raft_algorithms_test.cpp  raft_cluster_test.cpp  raft_kv_service_test.cpp  raft_log_test.cpp  raft_node_test.cpp  raft_persistence_test.cpp  raft_protocol_test.cpp  snapshot_store_test.cpp  state_machine_test.cpp  wal_test.cpp
